Added 'beta' tag and notice

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -38,6 +38,14 @@
 				compare book prices from various bookstores and websites in
 				Malaysia.
 			</p>
+			<p class="beta small">
+				<strong>BETA MODE:</strong> BukuTip is still new and is under heavy
+				beta development, please bear with us if you encounter any
+				errors or weird behaviours. Any server errors are automatically
+				logged and notified to the developer, but if you'd like, you
+				may <a href="/feedback">contact</a> him directly to report
+				anything else.
+			</p>
 			<h2>Which bookstores?</h2>
 			<p>For now, BukuTip searches these bookstores and websties:</p>
 			<ul>
