Added link to the weblog and updated the about page

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -38,6 +38,16 @@
 				compare book prices from various bookstores and websites in
 				Malaysia.
 			</p>
+			<p>
+				BukuTip currently searches for book prices from
+				<a href="http://www.mphonline.com/">MPH</a>,
+				<a href="http://www.kinokuniya.com/">Kinokuniya</a> and
+				<a href="http://www.timesbookstores.com.my/">Times Bookstores</a>.
+				It also searches <a href="http://www.bookxcess.com/">BookXcess</a>
+				and <a href="http://www.mudah.my/">Mudah.my</a> which have
+				cheaper prices (most probably) but with lesser book titles to
+				search from.
+			</p>
 			<p class="beta small">
 				<strong>BETA MODE:</strong> BukuTip is still new and is under heavy
 				beta development, please bear with us if you encounter any
@@ -46,40 +56,53 @@
 				may <a href="/feedback">contact</a> him directly to report
 				anything else.
 			</p>
-			<h2>Which bookstores?</h2>
-			<p>For now, BukuTip searches these bookstores and websties:</p>
-			<ul>
-				<li><a href="http://www.bookxcess.com/">BookXcess</a></li>
-				<li><a href="http://bookweb.kinokuniya.co.jp/indexohb.cgi?AREA=05">Kinokuniya Malaysia</a></li>
-				<li><a href="http://www.mphonline.com/">MPH</a></li>
-				<li><a href="http://www.mudah.my/">Mudah.my</a></li>
-				<li><a href="http://www.timesbookstore.com.my/">Times Bookstores</a></li>
-			</ul>
+			<h2>How to search for a book</h2>
+			<p>
+				<a href="http://www.flickr.com/photos/21735841@N05/2946652050/" class="small" style="float:right; margin-left:6px;"
+				   title="ISBN-barcode[1] by BillPe, on Flickr"><img src="http://farm4.static.flickr.com/3165/2946652050_33e2f87cb7_m.jpg" width="240" height="148" alt="ISBN-barcode[1]" /></a>
+				The best way to look for a book in BukuTip is to use it's
+				<a href="http://en.wikipedia.org/wiki/ISBN">ISBN</a> (also
+				known as EAN-13) number, you can find this number at the back
+				of the book near the barcode. It is a 13-digit number which
+				usually starts with 978, the "<a href="http://en.wikipedia.org/wiki/Bookland">bookland</a>"
+				code. <strong>See the sample pic on the right.</strong>
+			</p>
+			<p style="clear:both">
+				You can also search using the book's title, author or
+				keywords. When you do this however, the result might include
+				editions published outside of Malaysia and therefore the
+				book might not be available in local bookstores.
+			</p>
 			<h2>How's it done?</h2>
 			<p>
 				BukuTip simply does a direct search on each of the above
-				bookstore's website for a book based on its
-				<a href="http://en.wikipedia.org/wiki/ISBN">ISBN</a> code and
+				bookstore's website for a book based on its ISBN, then
 				parses (or <a href="http://en.wikipedia.org/wiki/Web_scraping">scrapes</a>)
 				for the price value.
 			</p>
 			<p class="small note">
-				Note for bookstore webmasters: please contact BukuTip if you'd
-				like to know more about how we scrape you or if you'd like
-				your bookstore to be featured also.
+				<strong>NOTE:</strong> For bookstore webmasters, please
+				<a href="/feedback">contact me</a> if you'd like to know more about how we scrape you
+				or if you'd like your bookstore to be featured also.
 			</p>
-			<h2>Contact</h2>
+			<h2>Who built this?</h2>
 			<p>
-				BukuTip is built by <a href="http://twitter.com/zaim">Zaim Bakar</a>.
-				For feedback, questions, or other inquiries, please contact
-				<a href="mailto:zaimworks@gmail.com">zaimworks@gmail.com</a>.
+				BukuTip is built by me, <a href="http://twitter.com/zaim">Zaim Bakar</a>,
+				a broke freelance web developer who love cheap books. You
+ 				can contact me via the <a href="/feedback">feedback</a> page
+				or twitter <a href="http://twitter.com/zaim">@zaim</a>.
+			</p>
+			<p class="big blog-link">
+				Learn more &amp; get latest news at the weblog:<br/>
+				<strong><a href="http://bukutip.blogspot.com">bukutip.blogspot.com</a></strong>
 			</p>
 		</section>
 		<footer id="bottom">
 			<p class="small">
 				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
+				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
-				<a href="/pages/terms.html">Terms</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
 				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
 			</p>
