--- a/static/html/spread.html
+++ b/static/html/spread.html
@@ -45,8 +45,9 @@
 		<footer id="bottom">
 			<p class="small">
 				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
+				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
-				<a href="/pages/terms.html">Terms</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
 				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
 			</p>
