Added link to GitHub

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -83,7 +83,8 @@
 			<p class="small note">
 				<strong>NOTE:</strong> For bookstore webmasters, please
 				<a href="/feedback">contact me</a> if you'd like to know more about how we scrape you
-				or if you'd like your bookstore to be featured also.
+				or if you'd like your bookstore to be featured also. You can also check out our
+				source code at <a href="https://github.com/zaim/bukutip">GitHub</a>.
 			</p>
 			<h2>Who built this?</h2>
 			<p>
@@ -91,6 +92,11 @@
 				a broke freelance web developer who love cheap books. You
  				can contact me via the <a href="/feedback">feedback</a> page
 				or twitter <a href="http://twitter.com/zaim">@zaim</a>.
+			</p>
+			<h2>Open Source</h2>
+			<p>
+				BukuTip is open source software. Get the code at
+				<a href="https://github.com/zaim/bukutip">GitHub</a>.
 			</p>
 			<p class="big blog-link">
 				Learn more &amp; get latest news at the weblog:<br/>
@@ -101,6 +107,7 @@
 			<p class="small">
 				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
 				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
+				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
