Fixed some HTML/CSS margin issues.

--- a/static/html/terms.html
+++ b/static/html/terms.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Search and compare book prices in Malaysia. MPH, Kinokuniya, Times, Bookxcess and more."/>
 	<title>BukuTip &ndash; Terms of Service</title>
 	<link rel="shortcut icon" href="/favicon.ico"/>
-	<link rel="stylesheet" media="all" href="/static/css/main.css?v=001d.1"/>
+	<link rel="stylesheet" media="all" href="/static/css/main.css?v=0-1-beta.1"/>
 	<script src="http://cachedcommons.org/cache/json2/0.0.0/javascripts/json2-min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	<!--[if lt IE 9]>
@@ -31,7 +31,7 @@
 				<div class="search-bar"><input type="text" name="q" id="q" autofocus/><input type="submit" value="Search"/></div>
 			</form>
 		</header>
-		<section id="content">
+		<section id="content" class="read">
 			<h1>Terms of Service</h1>
 			<div id="terms">
 				<p class="cc">
