--- a/static/html/about.html
+++ b/static/html/about.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Search and compare book prices in Malaysia. MPH, Kinokuniya, Times, Bookxcess and more."/>
 	<title>BukuTip &ndash; About</title>
 	<link rel="shortcut icon" href="/favicon.ico"/>
-	<link rel="stylesheet" media="all" href="/static/css/main.css?v=001d.1"/>
+	<link rel="stylesheet" media="all" href="/static/css/main.css?v=0-1-beta.1"/>
 	<script src="http://cachedcommons.org/cache/json2/0.0.0/javascripts/json2-min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 	<!--[if lt IE 9]>
@@ -31,8 +31,8 @@
 				<div class="search-bar"><input type="text" name="q" id="q" autofocus/><input type="submit" value="Search"/></div>
 			</form>
 		</header>
-		<section id="content">
-			<h1>About BukuTip</h2>
+		<section id="content" class="read">
+			<h1>About BukuTip</h1>
 			<p>
 				Welcome! BukuTip is a free web app that searches for and
 				compare book prices from various bookstores and websites in
