Added the Promote static page

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -73,7 +73,7 @@
 				editions published outside of Malaysia and therefore the
 				book might not be available in local bookstores.
 			</p>
-			<h2>How's it done?</h2>
+			<h2>How does it work?</h2>
 			<p>
 				BukuTip simply does a direct search on each of the above
 				bookstore's website for a book based on its ISBN, then
@@ -109,6 +109,7 @@
 				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/promote.html">Promote</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
 				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
