--- a/static/html/privacy.html
+++ b/static/html/privacy.html
@@ -154,6 +154,7 @@
 				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/promote.html">Promote</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
 				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
