--- a/static/html/promote.html
+++ b/static/html/promote.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width; initial-scale=1"/>
 	<meta name="description" content="Search and compare book prices in Malaysia. MPH, Kinokuniya, Times, Bookxcess and more."/>
-	<title>BukuTip &ndash; Spread the Word</title>
+	<title>BukuTip &ndash; Promote</title>
 	<link rel="shortcut icon" href="/favicon.ico"/>
 	<link rel="stylesheet" media="all" href="/static/css/main.css?v=0-1-beta.1"/>
 	<script src="http://cachedcommons.org/cache/json2/0.0.0/javascripts/json2-min.js"></script>
@@ -23,7 +23,7 @@
 		})();
 	</script>
 </head>
-<body id="about">
+<body id="support">
 	<div class="container">
 		<header id="top">
 			<h1 id="logo"><a href="/">BukuTip</a></h1>
@@ -32,23 +32,43 @@
 			</form>
 		</header>
 		<section id="content" class="read">
-			<h1>Spread the Word</h1>
+			<h2>Spread the Word</h2>
 			<p>
-				BukuTip is a new service and not many people know about it.
-				If you like BukuTip, please spread the word and help promote
-				via Facebook, Twitter, etc.
+				If you like BukuTip, please spread the word and
+				recommend us to your friends and family. Tweet about
+				BukuTip, or post it on Facebook:
 			</p>
-			<p class="note">
-				<em>More Coming Soon :)</em>
+			<div id="share-tools">
+				<div class="to-twitter">
+					<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://bukutip.appspot.com/" data-text="check out BukuTip: search and compare book prices in Malaysia" data-count="vertical" data-related="zaim:BukuTip developer">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+				</div>
+				<div class="to-facebook">
+					<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fbukutip.appspot.com%2F&amp;layout=box_count&amp;show_faces=false&amp;width=300&amp;action=like&amp;colorscheme=light&amp;height=65" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:65px;" allowTransparency="true"></iframe>
+				</div>
+			</div>
+			<h2>Support BukuTip</h2>
+			<p>
+				BukuTip is an ad-free service and open source product, developed
+				by <a href="http://twitter.com/zaim">Zaim Bakar</a>,
+				a broke freelance web and open source developer. It
+				is hosted for free on <a href="http://code.google.com/appengine">Google App Engine</a>,
+				but might incur costs in the future. So if you really,
+				really like BukuTip, support in donation is also welcomed!
 			</p>
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="paypal">
+				<input type="hidden" name="cmd" value="_s-xclick">
+				<input type="hidden" name="hosted_button_id" value="UA84M33XQHXLU">
+				<input type="image" src="https://www.paypal.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+				<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			</form>
 		</section>
 		<footer id="bottom">
 			<p class="small">
 				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
 				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/support.html">Promote</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
-				<a href="/pages/promote.html">Promote</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
 				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
