Fixed broken 'promote' link

--- a/static/html/promote.html
+++ b/static/html/promote.html
@@ -67,7 +67,7 @@
 				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
 				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
 				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
-				<a href="/pages/support.html">Promote</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/promote.html">Promote</a> &nbsp;&#9474&nbsp;
 				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
 				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
