Renamed 'Promote' to 'Share' page. Updated footer

--- a/static/html/share.html
+++ b/static/html/share.html
@@ -64,14 +64,15 @@
 		</section>
 		<footer id="bottom">
 			<p class="small">
-				<a href="/pages/about.html">About</a> &nbsp;&#9474&nbsp;
-				<a href="http://bukutip.blogspot.com/" target="_blank">Blog</a> &nbsp;&#9474&nbsp;
-				<a href="https://github.com/zaim/bukutip">Code</a> &nbsp;&#9474&nbsp;
-				<a href="/pages/promote.html">Promote</a> &nbsp;&#9474&nbsp;
-				<a href="/feedback">Feedback</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/about.html" title="Learn more about BukuTip / Help!">About</a> &nbsp;&#9474&nbsp;
+				<a href="/feedback" title="Send feedback">Feedback</a> &nbsp;&#9474&nbsp;
+				<a href="/pages/share.html" title="Spread the word about Bukutip">Share</a> &nbsp;&#9474&nbsp;
 				<a href="/pages/terms.html">Terms</a> /
-				<a href="/pages/privacy.html">Privacy</a> &nbsp;&#9474&nbsp;
-				built by <a href="http://twitter.com/zaim" class="zw">zaim</a>
+				<a href="/pages/privacy.html">Privacy</a>
+			</p>
+			<p class="small misc">
+				Latest News: <a href="http://bukutip.blogspot.com/">BukuTip Blog</a> &nbsp;&#9474&nbsp;
+				BukuTip is Open Source: <a href="http://github.com/zaim/bukutip">GitHub</a>
 			</p>
 		</footer>
 	</div>
